antlr-test/src/main/resources/Demo.g4
grammar Demo;

//parser
prog:stat;

stat:expr|NEWLINE;

expr:multExpr(('+'|'-')multExpr);

multExpr:atom(('*'|'/')atom)*;

atom:'('expr')'
    |INT
    |ID;

// lexer
ID:('a'..'z'|'A'..'Z')+;
INT:'0'..'9'+;
NEWLINE:'\r'?'\n';
ws:(' '|'\t'|'\n'|'\r')+{skip();};
